Mon Dec 03 09:253:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Transport.cpp:
          Re-introduced memory leak in MIOP server listerner. Something
          more complex and unknown is interacting with the memory block
          requiring it's extended life.

Fri Nov 30 15:23:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Transport.cpp:
          Fixed memory leak and alignment in MIOP server listerner.

Fri Nov 30 12:29:48 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/nslist/nsadd.cpp:
          No need to call orb destroy in catch, we do that already a
          few lines further

Thu Nov 29 14:33:56 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/PEMNaming.idl:

          Fixed more fuzz errors.

Thu Nov 29 10:13:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DLL_ORB/client.cpp:
        * tests/DLL_ORB/server.cpp:
          Fixed compile problems

Thu Nov 29 10:12:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2677_Regression/server.cpp:
        * tests/Bug_3542_Regression/server.cpp:
          Fixed compile problems

Wed Nov 28 14:14:51 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/util/utl_global.cpp (destroy):

          Added check for null before calling
          reset_last_in_same_parent_scope() on the internal CORBA
          module AST node. Thanks to Simon Massey
          <simon dot massey at primstech dot com> for pointing
          out this problem.

Wed Nov 28 07:33:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Any.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Impl_T.cpp:
        * tao/AnyTypeCode/Any_Special_Impl_T.cpp:
        * tao/AnyTypeCode/Objref_TypeCode.h:
          Layout changes
